RESOLVED FIXED116195
Fix FileChooserClient design
https://bugs.webkit.org/show_bug.cgi?id=116195
Summary Fix FileChooserClient design
Anders Carlsson
Reported 2013-05-15 17:22:45 PDT
Fix FileChooserClient design
Attachments
Patch (8.96 KB, patch)
2013-05-15 17:27 PDT, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2013-05-15 17:27:50 PDT
Andreas Kling
Comment 2 2013-05-15 17:44:18 PDT
Comment on attachment 201901 [details] Patch This makes a lot more sense.
Anders Carlsson
Comment 3 2013-05-15 17:48:04 PDT
Note You need to log in before you can comment on or make changes to this bug.