Source/WebCore/html/FileInputType.h
@@ -45,10 +45,13 @@ class FileList;
 class FileInputType : public BaseClickableWithKeyInputType, private FileChooserClient, private FileIconLoaderClient {
 public:
     static PassOwnPtr<InputType> create(HTMLInputElement*);
+    virtual ~FileInputType();
+
     static Vector<FileChooserFileInfo> filesFromFormControlState(const FormControlState&);
 
 private:
     FileInputType(HTMLInputElement*);
+
     virtual const AtomicString& formControlType() const OVERRIDE;
     virtual FormControlState saveFormControlState() const OVERRIDE;
     virtual void restoreFormControlState(const FormControlState&) OVERRIDE;
@@ -86,6 +89,10 @@ private:
     void receiveDropForDirectoryUpload(const Vector<String>&);
 #endif
     void requestIcon(const Vector<String>&);
+
+    void applyFileChooserSettings(const FileChooserSettings&);
+
+    RefPtr<FileChooser> m_fileChooser;
 
     RefPtr<FileList> m_fileList;
     RefPtr<Icon> m_icon;
